src/ui/snapshots/dtop__ui__ui_tests__tests__action_menu_enabled.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 1 containers ('?' for help, 'q' to quit)                                                                  
                                                                                                                        
  ID             Name                                        CPU %   Memory  Net TX       Net RX       Created ▼        
                                                                                                                        
  abc123456789 ▶ nginx                                        25.5%   45.2%  1.0KB/s      2.0KB/s      2 hours ago      
                                                                                                                        
                                                                                                                        
                                        ┌─────── Actions: nginx (local) ───────┐                                        
                                        │>  >_  Shell                          │                                        
                                        │   ■  Stop                            │                                        
                                        │   ↻  Restart                         │                                        
                                        │   ✕  Remove                          │                                        
                                        │                                      │                                        
                                        │                                      │                                        
                                        │                                      │                                        
                                        │ ↑/↓: Navigate  Enter: Execute  Esc/← │                                        
                                        └──────────────────────────────────────┘
