src/ui/snapshots/dtop__ui__ui_tests__tests__column_selector_popup.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 0 containers ('?' for help, 'q' to quit)                                              
                                                                                                    
  ID             Name                    CPU %   Memory  Net TX       Net RX       Created ▼        
                                                                                                    
                                                                                                    
                                                                                                    
                         ┌─────────────────── Columns ────────────────────┐                         
                         │  Re-order: <PageUp> / <PageDown>               │                         
                         │                                                │                         
                         │>   ID                            [X]           │                         
                         │    Status Icon                   [X]           │                         
                         │    Name                          [X]           │                         
                         │    Host                          [X]           │                         
                         │    Compose                       [ ]           │                         
                         │    Image                         [ ]           │                         
                         │    CPU %                         [X]           │                         
                         │    Memory %                      [X]           │                         
                         │    PIDs                          [ ]           │                         
                         │    Net TX                        [X]           │                         
                         │    Net RX                        [X]           │                         
                         │    Disk R                        [ ]           │                         
                         │                                                │                         
                         │    Enter/Space: Toggle  Esc: Close  c: Close   │                         
                         └────────────────────────────────────────────────┘
