src/ui/snapshots/dtop__ui__ui_tests__tests__container_list_with_hidden_columns.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 0 containers ('?' for help, 'q' to quit)                                              
                                                                                                    
    Name                                              CPU %   Memory  Net RX       Created ▼
