src/ui/snapshots/dtop__ui__ui_tests__tests__empty_container_list.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 0 containers ('?' for help, 'q' to quit)                                             
                                                                                                    
  ID             Name                    CPU %   Memory  Net TX       Net RX       Created ▼
