src/ui/snapshots/dtop__ui__ui_tests__tests__filtering_active_search_mode_off.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 2 containers ('?' for help, 'q' to quit)                                                                  
                                                                                                                        
  ID             Name                                        CPU %   Memory  Net TX       Net RX       Uptime ▼         
                                                                                                                        
  abc123456789 ▶ nginx                                        25.5%   45.2%  1.0KB/s      2.0KB/s      2 hours ago      
  def987654321 ▶ postgres                                     65.8%   78.3%  5.0KB/s      10.0KB/s     2 hours ago      
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
                                                                                                                        
Filtering: nginx
