src/ui/snapshots/dtop__ui__ui_tests__tests__help_popup_enabled.snap
---
source: src/ui/ui_tests.rs
expression: output
---
dtop vX.X.X - 1 containers ('?' for help, 'q' to quit)                                                                  
                                                                                                                        
  ID             Name                                        CPU %   Memory  Net TX       Net RX       Created ▼        
                                                                                                                        
  abc123456789 ▶ nginx                                        25.5%   45.2%  1.0KB/s      2.0KB/s      2 hours ago      
                                                                                                                        
                                                                                                                        
            ┌─────────────────────────────── Help - Press ? or ESC to close ───────────────────────────────┐            
            │                                                                                              │            
            │                                                                                              │            
            │ Navigation                                                                                   │            
            │   ↑/↓, j/k    Navigate/scroll (1 line)    →/l    View logs      ←/h    Exit logs             │            
            │   Enter       Action menu                 Esc    Close menu     ?      Toggle help           │            
            │   a           Show all containers         /      Filter         o      Open Dozzle           │            
            │   s           Sort by                     c      Column visibility                           │            
            │   PgUp/PgDn   Page up/down                Home   First          End    Last                  │            
            │                                                                                              │            
            │ Log View Scrolling                                                                           │            
            │   g/Home      Top              Ctrl+U, b, PgUp    Page up     Ctrl+D, Space, PgDn  Page down │            
            │   G/End       Bottom                                                                         │            
            │                                                                                              │            
            └──────────────────────────────────────────────────────────────────────────────────────────────┘
