src/ui/snapshots/dtop__ui__ui_tests__tests__high_resource_usage.snap
---
source: src/ui/ui_tests.rs
expression: output
---
┌dtop vX.X.X - 3 containers ('?' for help, 'q' to quit)────────────────────────────────────────────────────────────────┐
│ID             Name                                          CPU %   Memory  Net TX       Net RX       Uptime ▼       │
│                                                                                                                      │
│low12345678  ▶ low-usage                                      15.0%   20.0%  100B/s       200B/s       2 hours ago    │
│med12345678  ▶ medium-usage                                   55.0%   65.0%  1000.0KB/s   1.95MB/s     2 hours ago    │
│high12345678 ▶ high-usage                                     95.0%   99.0%  100.00MB/s   200.00MB/s   2 hours ago    │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
