src/ui/snapshots/dtop__ui__ui_tests__tests__log_view_empty.snap
---
source: src/ui/ui_tests.rs
expression: output
---
Logs: nginx (local) - Press ESC to return [LIVE]
